--- a/Dragonlance/Views/Home/Index.cshtml
+++ b/Dragonlance/Views/Home/Index.cshtml
@@ -1,8 +1,30 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@model List<Hero>
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Dragonlance Characters</h1>
+
+
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Class</th>
+                <th>Race</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var hero in Model)
+            {
+            <tr>
+                <td>@hero.Name</td>
+                <td>@hero.Class</td>
+                <td>@hero.Race</td>
+            </tr>
+            }
+        </tbody>
+    </table>
+
 </div>
