--- a/Dragonlance/Views/Home/Index.cshtml
+++ b/Dragonlance/Views/Home/Index.cshtml
@@ -6,6 +6,9 @@
 <div class="text-center">
     <h1 class="display-4">Dragonlance Characters</h1>
 
+    <form>
+        <input name="characterName" />
+    </form>
 
     <table>
         <thead>
@@ -13,6 +16,7 @@
                 <th>Name</th>
                 <th>Class</th>
                 <th>Race</th>
+                <th>Detail</th>
             </tr>
         </thead>
         <tbody>
@@ -22,6 +26,7 @@
                 <td>@hero.Name</td>
                 <td>@hero.Class</td>
                 <td>@hero.Race</td>
+                <td><a href="/home/herodetail/@hero.Id">detail</a></td>
             </tr>
             }
         </tbody>
